hello final code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.mail.username =tusharvaish077@gmail.com
 spring.mail.password =nciu ljsb hgjq etro
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+stripe.api.key=apisecret
+razorpay.api.key=rzp_test_RCnNhiwYzvicUS
+razorpay.api.secret=BXBeiM5nWrpwDbt2aIHbnKPa
